initial business logic
